# qtile_widgets

./: README.md  coingecko_ticker.py  custom_mpris2.py  hive_rewards.py  notifications_manager.py  now_playing.py  pyproject.toml  swallow.py
src/widgets/: __init__.py  coingecko_ticker.py  hive_notifications.py  hive_rewards.py  notifications.py  now_playing.py  qtile_hive_widget.py  swallow.py
