[project]
name = "widgets"
version = "0.2.8"
description = "My personal Qtile Widgets"
readme = "README.md"
authors = [{ name = "Michael Garcia", email = "thecrazygm@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["aiohttp", "dbus-fast", "hive-nectar", "qtile"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
